--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey, Im a big heading</h1>
-<p>Hey, im a paragraph <b>element.</b></p>
-<a href="https://google.com" target="_blank" title="Let's go to google">Click Me! I'm a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+    <h1>Hey, Im a big heading</h1>
+    <p>Hey, im a paragraph <b>element.</b></p>
+    <a href="https://google.com" target="_blank" title="Let's go to google">Click Me! I'm a link</a>
+    <p>My name is:<br>
+    Kitty Cat</p>
+    <img src="img/cat.jpeg">
+</body>
+</html>
